--- a/project.config.json
+++ b/project.config.json
@@ -18,7 +18,7 @@
     "scopeDataCheck": false,
     "uglifyFileName": false,
     "checkInvalidKey": true,
-    "checkSiteMap": true,
+    "checkSiteMap": false,
     "uploadWithSourceMap": true,
     "compileHotReLoad": false,
     "useMultiFrameRuntime": true,
@@ -40,7 +40,7 @@
     "bundle": false
   },
   "compileType": "miniprogram",
-  "libVersion": "2.0.4",
+  "libVersion": "2.17.0",
   "appid": "wx57b5df24ffc32f6a",
   "projectname": "miniprogram-1",
   "debugOptions": {
